force-app/main/default/objects/Policy_Claim_Detail__c/Policy_Claim_Detail__c.object-meta.xml
<CustomObject>
    <label>Policy Claim Detail</label>
    <nameField>
        <displayFormat>Claim-{0000000}</displayFormat>
        <label>Claim Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Claims Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>