force-app/main/default/objects/Policy_Claim_Detail__c/fields/Account_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Close_Date__c</fullName>
    <label>Account Close Date</label>
    <type>Date</type>
</CustomField>