force-app/main/default/objects/Policy_Claim_Detail__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <label>Applied</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>