force-app/main/default/objects/Policy_Claim_Detail__c/fields/Cash_Received__c.field-meta.xml
<CustomField>
    <fullName>Cash_Received__c</fullName>
    <label>Cash Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>