force-app/main/default/objects/Policy_Claim_Detail__c/fields/Ceded_LAE__c.field-meta.xml
<CustomField>
    <fullName>Ceded_LAE__c</fullName>
    <label>Ceded LAE</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>