force-app/main/default/objects/Policy_Claim_Detail__c/fields/Ceded_LAE_Res__c.field-meta.xml
<CustomField>
    <fullName>Ceded_LAE_Res__c</fullName>
    <label>Ceded LAE Res</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>