force-app/main/default/objects/Policy_Claim_Detail__c/fields/Ceded_Loss__c.field-meta.xml
<CustomField>
    <fullName>Ceded_Loss__c</fullName>
    <label>Ceded Loss</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>