force-app/main/default/objects/Policy_Claim_Detail__c/fields/Claim_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_File_Type__c</fullName>
    <formula>IF(ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;Incident&apos;)=true, &apos;Incident&apos;, 
  IF(ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;Claim&apos;)=true, &apos;Claim&apos;, 
  IF(ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;Suit&apos;)=true, &apos;Suit&apos;, 
  IF(ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;ARDC Complaint&apos;)=true, &apos;ARDC Complaint&apos;, 
  IF(ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;Memo&apos;)=true, &apos;Memo&apos;, 
null)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim File Type</label>
    <type>Text</type>
</CustomField>