force-app/main/default/objects/Policy_Claim_Detail__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <label>Closed</label>
    <type>Date</type>
</CustomField>