force-app/main/default/objects/Policy_Claim_Detail__c/fields/Coverage_Issue__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Issue</label>
    <type>Checkbox</type>
</CustomField>