force-app/main/default/objects/Policy_Claim_Detail__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Accepted / Covered by Another</fullName>
            </value>
            <value>
                <fullName>Accepted/Covered by Another Insurance</fullName>
            </value>
            <value>
                <fullName>Closed due to Claim Repair with LAE payment</fullName>
            </value>
            <value>
                <fullName>Closed with LAE payment only</fullName>
            </value>
            <value>
                <fullName>Closed with both Indemnity and LAE</fullName>
            </value>
            <value>
                <fullName>Coverage Denied</fullName>
            </value>
            <value>
                <fullName>No manner in which disposed indicated</fullName>
            </value>
            <value>
                <fullName>Resolved through Arbitration</fullName>
            </value>
            <value>
                <fullName>Settled by Insured without ISBA Mutual</fullName>
            </value>
            <value>
                <fullName>Settled by Mediation</fullName>
            </value>
            <value>
                <fullName>Tried to Final Judgement with Indemnity</fullName>
            </value>
            <value>
                <fullName>Tried to Final Judgement without Indemni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>