force-app/main/default/objects/Policy_Claim_Detail__c/fields/First_Deductible_LAE__c.field-meta.xml
<CustomField>
    <fullName>First_Deductible_LAE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this first deductible amount for LAE as per policy.</description>
    <label>First Deductible LAE</label>
    <type>Checkbox</type>
</CustomField>