force-app/main/default/objects/Policy_Claim_Detail__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alan Sue</fullName>
            </value>
            <value>
                <fullName>Audit ISBA</fullName>
            </value>
            <value>
                <fullName>Cai Huang</fullName>
            </value>
            <value>
                <fullName>Candice Goldstein</fullName>
            </value>
            <value>
                <fullName>Cinda Berry</fullName>
            </value>
            <value>
                <fullName>David Sameshima</fullName>
            </value>
            <value>
                <fullName>Demi Clay</fullName>
            </value>
            <value>
                <fullName>Elizabeth Shaykin</fullName>
            </value>
            <value>
                <fullName>Jeff Strand</fullName>
            </value>
            <value>
                <fullName>Jessica Chu</fullName>
            </value>
            <value>
                <fullName>Joan Comfort</fullName>
            </value>
            <value>
                <fullName>Joann Woo</fullName>
            </value>
            <value>
                <fullName>Kyle Hoker</fullName>
            </value>
            <value>
                <fullName>Lisa Garbaty</fullName>
            </value>
            <value>
                <fullName>Melissa Kaplan</fullName>
            </value>
            <value>
                <fullName>Neil Bergeron</fullName>
            </value>
            <value>
                <fullName>Tectnoic</fullName>
            </value>
            <value>
                <fullName>Veronique Rufus</fullName>
            </value>
            <value>
                <fullName>Xu Jun Liu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>