force-app/main/default/objects/Policy_Claim_Detail__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>