force-app/main/default/objects/Policy_Claim_Detail__c/fields/ISBA_Contribution__c.field-meta.xml
<CustomField>
    <fullName>ISBA_Contribution__c</fullName>
    <label>ISBA Contribution</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>