force-app/main/default/objects/Policy_Claim_Detail__c/fields/ISBA_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>ISBA_First_Payment__c</fullName>
    <label>ISBA First Payment</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>