force-app/main/default/objects/Policy_Claim_Detail__c/fields/LAE_Amount__c.field-meta.xml
<CustomField>
    <fullName>LAE_Amount__c</fullName>
    <label>LAE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>