force-app/main/default/objects/Policy_Claim_Detail__c/fields/Loss_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loss_Amount__c</fullName>
    <label>Loss Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>