force-app/main/default/objects/Policy_Claim_Detail__c/fields/Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable__c</fullName>
    <label>Non Billable</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>