force-app/main/default/objects/Policy_Claim_Detail__c/fields/Policy_Claim__c.field-meta.xml
<CustomField>
    <fullName>Policy_Claim__c</fullName>
    <label>Policy Claim</label>
    <referenceTo>Policy_Claim__c</referenceTo>
    <relationshipLabel>Claims Detail</relationshipLabel>
    <relationshipName>Policy_Claims_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>