force-app/main/default/objects/Policy_Claim_Detail__c/fields/Policy_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Record_ID__c</fullName>
    <formula>Policy_Claim__r.Policy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Record ID</label>
    <type>Text</type>
</CustomField>