force-app/main/default/objects/Policy_Claim_Detail__c/fields/Recoverable_Loss__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_Loss__c</fullName>
    <label>Recoverable Loss</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>