force-app/main/default/objects/Policy_Claim_Detail__c/fields/Reinsurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reinsurance_Amount__c</fullName>
    <label>Reinsurance Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>