force-app/main/default/objects/Policy_Claim_Detail__c/fields/Reopened__c.field-meta.xml
<CustomField>
    <fullName>Reopened__c</fullName>
    <label>Reopened</label>
    <type>Date</type>
</CustomField>