force-app/main/default/objects/Policy_Claim_Detail__c/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <label>Reported</label>
    <type>Date</type>
</CustomField>