force-app/main/default/objects/Policy_Claim_Detail__c/fields/Total_Deductible_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible_Used__c</fullName>
    <label>Total Deductible Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>