force-app/main/default/objects/Policy_Claim_Detail__c/fields/ULAE__c.field-meta.xml
<CustomField>
    <fullName>ULAE__c</fullName>
    <label>ULAE</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>