force-app/main/default/objects/Policy_Claim_Detail__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Type__c</field>
            <operation>equals</operation>
            <value>Vendor, Customer and Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.AcctSeed__Accounting_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policy Claims Detail</relationshipLabel>
    <relationshipName>Policy_Claims_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>