force-app/main/default/objects/Policy_Claim_Detail__c/fields/Write_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Amount__c</fullName>
    <label>Write Off Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>