force-app/main/default/objects/Policy_Claim_Detail__c/recordTypes/Claim_Payment.recordType-meta.xml
<RecordType>
    <fullName>Claim_Payment</fullName>
    <active>true</active>
    <description>LAE / Loss payment against Reserves.</description>
    <label>Claim Payment</label>
</RecordType>