force-app/main/default/objects/Policy_Claim_Detail__c/recordTypes/Deductible.recordType-meta.xml
<RecordType>
    <fullName>Deductible</fullName>
    <active>true</active>
    <description>1) Allocate Deductible Loss/LAE. 2) Cash Received / Write-off against Deductible.</description>
    <label>Deductible</label>
</RecordType>