force-app/main/default/objects/Policy_Claim_Detail__c/recordTypes/Reinsurance.recordType-meta.xml
<RecordType>
    <fullName>Reinsurance</fullName>
    <active>true</active>
    <description>1) Create Due from Reinsurance Loss/LAE. 2) Change in Ceded Reserve for Loss/LAE.</description>
    <label>Reinsurance</label>
</RecordType>