force-app/main/default/objects/Policy_Claim_Detail__c/recordTypes/Reserve.recordType-meta.xml
<RecordType>
    <fullName>Reserve</fullName>
    <active>true</active>
    <description>1) Increase Reserve(User Reserve)  2) Close/Re-Open Reserve</description>
    <label>Reserve</label>
</RecordType>