force-app/main/default/objects/Policy_Claim_Detail__c/recordTypes/Unallocated_LAE.recordType-meta.xml
<RecordType>
    <fullName>Unallocated_LAE</fullName>
    <active>true</active>
    <description>Unallocated Payment for all Claims except Memo.</description>
    <label>Unallocated LAE</label>
</RecordType>