force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Allocated_not_exceed_by_DeductibleLoss.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocated_not_exceed_by_DeductibleLoss</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Deductible Loss&apos;) &amp;&amp;
IF( ISNEW() , 
          Loss_Amount__c &gt;    Policy_Claim__r.Deductible_Remaining__c, 
           (PRIORVALUE(Loss_Amount__c ) + Policy_Claim__r.Deductible_Remaining__c - Loss_Amount__c ) &lt;0
    )</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>Loss Amount cannot exceed &apos;Deductible Allocated&apos; Remaining!</errorMessage>
</ValidationRule>