force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/ClaimPaymentOfLAE_must_be_empty_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>ClaimPaymentOfLAE_must_be_empty_Loss</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;LAE Payment&apos;) &amp;&amp;
!ISNULL(Loss_Amount__c)</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>&apos;Loss Amount&apos; should be empty in case of &apos;LAE Payment&apos;!</errorMessage>
</ValidationRule>