force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/ClaimPaymentOfLoss_must_be_empty_LAE.validationRule-meta.xml
<ValidationRule>
    <fullName>ClaimPaymentOfLoss_must_be_empty_LAE</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Loss Payment&apos;) &amp;&amp;
!ISNULL(LAE_Amount__c)</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&apos;LAE Amount&apos; should be empty in case of &apos;Loss Payment&apos;!</errorMessage>
</ValidationRule>