force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Deductible_CashPayment_Lossamt_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Deductible_CashPayment_Lossamt_Input</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Cash Payment&apos;) &amp;&amp;
!ISNULL(Loss_Amount__c)</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>&apos;Loss Amount&apos; should be empty in case of &apos;Cash Payment&apos;!</errorMessage>
</ValidationRule>