force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Deductible_DeductibleExp_LAEamt_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Deductible_DeductibleExp_LAEamt_Input</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Deductible Expense&apos;) &amp;&amp;
LAE_Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&apos;LAE Amount&apos; should be greater than zero in case of &apos;Deductible Expense&apos;!</errorMessage>
</ValidationRule>