force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Deductible_DeductibleLoss_ChequeNo_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Deductible_DeductibleLoss_ChequeNo_Input</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Deductible Loss&apos;) &amp;&amp;
! ISBLANK(Cheque_Number__c)</errorConditionFormula>
    <errorDisplayField>Cheque_Number__c</errorDisplayField>
    <errorMessage>&apos;Cheque Number&apos; should be empty in case of &apos;Deductible Loss&apos;!</errorMessage>
</ValidationRule>