force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Deductible_DeductibleLoss_LAEamt_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Deductible_DeductibleLoss_LAEamt_Input</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Deductible Loss&apos;) &amp;&amp;
!ISNULL(LAE_Amount__c)</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&apos;LAE Amount&apos; should be empty in case of &apos;Deductible Loss&apos;!</errorMessage>
</ValidationRule>