force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Deductible_DeductibleLoss_Lossamt_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>Deductible_DeductibleLoss_Lossamt_Input</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Deductible Loss&apos;) &amp;&amp;
Loss_Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>&apos;Loss Amount&apos; should be greater than zero in case of &apos;Deductible Loss&apos;!</errorMessage>
</ValidationRule>