force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Memo_Claim_Type_Not_AllowFor_Detail_Rcd.validationRule-meta.xml
<ValidationRule>
    <fullName>Memo_Claim_Type_Not_AllowFor_Detail_Rcd</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Policy_Claim__r.File_Type__c, &apos;Memo&apos;)</errorConditionFormula>
    <errorMessage>&apos;Memo&apos; claims are only stored in the system as stand alone, details records are not created for claim type &apos;Memo&apos;!</errorMessage>
</ValidationRule>