force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Open_Reserve_entry_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Reserve_entry_not_allowed</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Open Reserve&apos;)&amp;&amp;
Policy_Claim__r.Total_Open_Reserve_Entries__c &gt;0</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>&quot;Open Reserve&quot; is only allowed at the time of Claim Creation!</errorMessage>
</ValidationRule>