force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Payment_do_not_have_enough_Reserve_LAE.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_do_not_have_enough_Reserve_LAE</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &apos;Claim Payment&apos; &amp;&amp;
 ISPICKVAL(  Type__c , &apos;LAE Payment&apos;) &amp;&amp;
 Not(ISNULL( LAE_Amount__c )) &amp;&amp;
  LAE_Amount__c  &gt;    Policy_Claim__r.Unpaid_Reserves_Direct_LAE__c</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>LAE Payment should not exceed from &quot;Unpaid LAE Reserve&quot; Balance!</errorMessage>
</ValidationRule>