force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Payment_do_not_have_enough_Reserve_Loss.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_do_not_have_enough_Reserve_Loss</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &apos;Claim Payment&apos; &amp;&amp;
 ISPICKVAL(  Type__c , &apos;Loss Payment&apos;) &amp;&amp;
 Not(ISNULL( Loss_Amount__c )) &amp;&amp;
  Loss_Amount__c  &gt;    Policy_Claim__r.Unpaid_Reserves_Direct_Loss__c</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>Loss Payment should not exceed from &quot;Unpaid Loss Reserve&quot; Balance!</errorMessage>
</ValidationRule>