force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/PolicyClaimClosePaymentcannotbemade.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyClaimClosePaymentcannotbemade</fullName>
    <active>false</active>
    <description>If master claim has been closed then user can not make any payment.</description>
    <errorConditionFormula>Policy_Claim__r.Claim_Closed__c &amp;&amp;
 RecordType.Name = &apos;Claim Payment&apos;</errorConditionFormula>
    <errorMessage>Payment cannot be made if  &apos;Claim&apos; is Closed!</errorMessage>
</ValidationRule>