force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/PolicyClaimCloseReserveNegativeLAEAmt.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyClaimCloseReserveNegativeLAEAmt</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Close Reserve&apos;) &amp;&amp;
!ISNULL(  LAE_Amount__c  ) &amp;&amp; 
LAE_Amount__c &gt;0</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&apos;LAE Amount&apos; cannot be Positive in case of &apos;Close Reserve&apos;!</errorMessage>
</ValidationRule>