force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/PolicyClaimCloseReserveNegativeLossAmt.validationRule-meta.xml
<ValidationRule>
    <fullName>PolicyClaimCloseReserveNegativeLossAmt</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Close Reserve&apos;) &amp;&amp;
!ISNULL(  Loss_Amount__c  ) &amp;&amp; 
Loss_Amount__c &gt;0</errorConditionFormula>
    <errorDisplayField>Loss_Amount__c</errorDisplayField>
    <errorMessage>&apos;Loss Amount&apos; cannot Positive in case of &apos;Close Reserve&apos;!</errorMessage>
</ValidationRule>