force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Reserve_Close_LAE_can_not_in_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve_Close_LAE_can_not_in_negative</fullName>
    <active>false</active>
    <description>On Claim --&gt; Claim Incurred can not be in negative!</description>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Close Reserve&apos;) &amp;&amp;
!ISNULL(LAE_Amount__c) &amp;&amp; 
LAE_Amount__c*-1&gt;  
  Policy_Claim__r.Claim_Incurred__c</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&apos;Reserve LAE&apos; Amount cannot exceed &apos;Policy Incurred&apos;!</errorMessage>
</ValidationRule>