force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Unallocated_ARDC_Claim_Type_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Unallocated_ARDC_Claim_Type_Control</fullName>
    <active>false</active>
    <description>Incase Claim = ARDC then type should be &quot;Claim Coverage ARDC&quot;</description>
    <errorConditionFormula>ISPICKVAL(  Policy_Claim__r.File_Type__c , &apos;ARDC Complaint&apos;) &amp;&amp;
 Not(ISPICKVAL(  Type__c , &apos;Claim Coverage - ARDC&apos;))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Type should be &quot;Claim Coverage - ARDC&quot; in case Claim is &quot;ARDC Complaint&quot;!</errorMessage>
</ValidationRule>