force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Unallocated_ARDC_Claim_Type_Control2.validationRule-meta.xml
<ValidationRule>
    <fullName>Unallocated_ARDC_Claim_Type_Control2</fullName>
    <active>false</active>
    <description>Incase Claim = ARDC then type should be &quot;Claim Coverage ARDC&quot;</description>
    <errorConditionFormula>Not(ISPICKVAL(  Policy_Claim__r.File_Type__c , &apos;ARDC Complaint&apos;)) &amp;&amp;
 ISPICKVAL(  Type__c , &apos;Claim Coverage - ARDC&apos;)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Claim should be &quot;ARDC Complaint&quot;!  in case  of &quot;Claim Coverage - ARDC&quot;!</errorMessage>
</ValidationRule>