force-app/main/default/objects/Policy_Claim_Detail__c/validationRules/Unallocated_ARDC_Fields_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>Unallocated_ARDC_Fields_Control</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name = &apos;Unallocated LAE&apos; 
&amp;&amp;
 ISPICKVAL(  Policy_Claim__r.File_Type__c , &apos;ARDC Complaint&apos;) &amp;&amp;
 !ISBLANK( LAE_Amount__c )</errorConditionFormula>
    <errorDisplayField>LAE_Amount__c</errorDisplayField>
    <errorMessage>&quot;LAE Amount&quot; should be empty in case Claim is &quot;ARDC Complaint&quot;!</errorMessage>
</ValidationRule>